[package]
name = "rustcurrent"
version = "0.1.0"
authors = ["Joshua Marron <marronjosh@hotmail.com>"]
[dev-dependencies]
criterion = "0.2.1"
crossbeam = "0.3.2"
chashmap = "2.2.0"
[dependencies]
time = "0.1"
rand = "0.5.0-pre.0"
thread_local = "0.3"
rayon="1.0"
im = "10.2.0"

[[bench]]
name="bench_stack"
harness=false

[[bench]]
name="bench_map"
harness=false

[[bench]]
name="bench_seg"
harness=false

[[bench]]
name="bench_queue"
harness=false

[[bench]]
name="bench_set"
harness=false